# SolarSystem

./: .gitignore  CMakeLists.txt  README.md  SolarSystem.sln
Data/: solar.replay  vstup.txt
Dokumentace/: classSimulation.tex  compSimMethods.tex  extensions.tex  implParsers.tex  implSimMethods.tex  implViewers.tex  implementace.aux  implementace.tex  main.aux  main.lof  main.lol  main.lot  main.out  main.tex  main.toc  moduly.tex  organizace.aux  organizace.tex  specifikace.aux  specifikace.tex  titlePage.aux  titlePage.tex  uzivatelPrirucka.aux  uzivatelPrirucka.tex
Dokumentace/Source/: RK4.cpp  explicitEuler.cpp  extIdea.cpp  extIdeaUsage.cpp  imgui1.cpp  main.cpp  parser.cpp  plot.gp  simMethod.cpp  simPublic.cpp  startFinal.cpp  startPseudo.cpp  startPseudoTimed.cpp  unit.cpp  viewer.cpp
LetniDokumentace/: implementace.tex  main.out  main.tex  organizace.tex  specifikace.tex  titlePage.tex  uzivatelPrirucka.tex  zdroje.tex
Libraries/lib/Debug/: glew32sd.lib  glfw3.lib
Libraries/lib/Release/: glew32s.lib  glfw3.lib
SolarSystem/: Plan.txt  SolarSystem.vcxproj  SolarSystem.vcxproj.filters
SolarSystem/Data/: test.replay  vstup.txt
SolarSystem/FileFormats/: FormattedTextFile.txt  ReplayerFile.txt
SolarSystem/Source/: ConsoleControl.cpp  ConsoleControl.h  Exception.h  Main.cpp  RecordedSimulation.h  ReplayedSimulation.h  Simulation.cpp  Simulation.h
SolarSystem/Source/Common/: Child.cpp  Child.h  Common.h  Exception.h  Settings.cpp  Settings.h  SystemUnit.cpp  SystemUnit.h  Timing.cpp  Timing.h
SolarSystem/Source/Elements/: Element.h
ZimniDokumentace/: classSimulation.tex  extensions.tex  implSimMethods.tex  navrhProgramu.tex  organizace.tex  specifikace.tex
ZimniDokumentace/Source/: euler.cpp  recording.cpp  simMethod.cpp  stabilita.cpp  startPseudoTimed.cpp  viewer.cpp
buildUbuntu/: CMakeCache.txt  Makefile  cmake_install.cmake
buildUbuntu/glfw-3.2.1/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
buildVS/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SolarSystem.sln  SolarSystem.vcxproj  SolarSystem.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildVS/glfw-3.2.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
(+135 files in other folders)
